--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
-  "private": true,
   "name": "emc.fish",
-  "description": "Edit My Config",
   "version": "1.0.0",
+  "private": true,
+  "description": "Edit My Config",
+  "homepage": "https://github.com/demartini/emc.fish#readme",
+  "bugs": {
+    "url": "https://github.com/demartini/emc.fish/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/demartini/emc.fish.git"
+  },
+  "license": "MIT",
   "author": {
     "name": "Iolar Demartini Junior",
     "email": "iolardemartini@gmail.com",
@@ -14,22 +23,14 @@
       "url": "https://github.com/demartini/emc.fish/graphs/contributors"
     }
   ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/demartini/emc.fish.git"
+  "scripts": {
+    "preinstall": "npx only-allow pnpm",
+    "release": "standard-version"
   },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/demartini/emc.fish/issues"
-  },
-  "homepage": "https://github.com/demartini/emc.fish#readme",
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "simple-git-hooks": "^2.11.1",
     "standard-version": "^9.5.0"
-  },
-  "scripts": {
-    "release": "standard-version"
   }
 }
